##Text encoding: utf-8

2007-04-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: added some white spaces
	for consistency.

2007-04-19  Jordan Mantha <mantha@ubuntu.com>
	* programs/table/gchemtable-app.cc: added electronegativity
	color scheme to gchemtable
	* programs/table/gchemtable-app.h: ditto

2007-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: really fix build.
	* libs/gcp/fragment-atom.cc: call gcu::Atom::SetZ instead of
	gcp::Atom::SetZ which does not support Z==0.

2007-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: fix build.
	* libs/gcp/atom.cc: in Atom::Transform2D, don't call itself,
	but theparent class method.

2007-04-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add new directories.
	* configure.ac: ditto.
	* goffice/Makefile.am: initial work on the goffice plugin.
	* goffice/gchemutils-priv.h: ditto.
	* goffice/gchemutils.cc: ditto.
	* goffice/gchemutils.h: ditto.
	* goffice/plugin.xml.in: ditto.
	* programs/paint/Makefile.am: enhanced build.

2007-04-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* templates/Makefile.am: new subtree.
	* templates/paint/Makefile.am: copied from GChemPaint.
	* templates/paint/templates.xml.in: ditto.

2007-04-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: removed some old tests (gcc < 0.3 not
	anymore supported).
	* libs/canvas/gnome-print-pango.c: fixed build issues.
	[#19523]
	* libs/gcp/about.cc: ditto.
	* libs/gcp/about.h: ditto.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/application.h: ditto.
	* libs/gcp/arrow.cc: ditto.
	* libs/gcp/atom.cc: ditto.
	* libs/gcp/bond.cc: ditto.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcp/electron.cc: ditto.
	* libs/gcp/fontsel.cc: ditto.
	* libs/gcp/fragment-atom.cc: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/operation.cc: ditto.